# RAE-agentic-memory

./: .ai-agent-rules.md  .backfill_progress.json  .coverage  .cursorrules  .dockerignore  .env  .env.docker  .env.example  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .rae_session  .zenodo.json  .~lock.FENIKS-podstawy-dla-agentow.docx#  .~lock.RAE-path-refactor.txt#  .~lock.testy-RAE-do-poprawy.txt#  AGENT_GUIDELINES.md  AGENT_QUALITY_SYSTEM.md  AI_AGENT_MANIFEST.md  API_DOCUMENTATION.md  AUTONOMOUS_OPERATIONS.md  BENCHMARK_IMPROVEMENT_IMPLEMENTATION_PLAN.md  BRANCH_PROTECTION.md  CHANGELOG.md  CITATION.cff  CI_FIX_PLAN.md  CI_LINT_FIX_PLAN.md  CI_ML_OPTIMIZATION_PLAN.md  CI_REPAIR_PLAN.md  CI_STEP10_DEPRECATION_WARNINGS_FIX.md  CI_STEP11_ISORT_FIX.md  CI_STEP3_LINT_AND_TEST_FIXES.md  CI_STEP4_FINAL_FIX.md  CI_STEP5_RUFF_AND_ONNX_FIX.md  CI_STEP6_PRESIDIO_FIX.md  CI_STEP7_OPENTELEMETRY_FIX.md  CI_STEP8_SKLEARN_FIX.md  CI_STEP9_INTEGRATION_TESTS_FIX.md  CLAUDE.md  (+159 more)
integrations/mcp-server/: INSTALL.md  README.md  config.py  main.py  pyproject.toml  rae_client.py  requirements.txt
integrations/mcp-server/examples/: .env.example  USAGE_EXAMPLES.md
integrations/mcp-server/examples/configs/: claude-desktop-config.json  cursor-config.json
integrations/mcp-server/src/rae_mcp_server/: __init__.py  __main__.py  server.py
integrations/mcp-server/tests/: test_server.py
rae-core/: README.md  coverage.json  pyproject.toml
rae-core/rae-core/tests/golden/: cosine_similarity_memory_correctness.json  cosine_similarity_sqlite_correctness.json  math_score_memory_standard.json
rae-core/rae_core/: engine.py  runtime.py  version.py
rae-core/rae_core/adapters/: __init__.py  postgres.py  postgres_db.py  qdrant.py  redis.py
rae-core/rae_core/adapters/memory/: cache.py  storage.py  vector.py
rae-core/rae_core/adapters/sqlite/: __init__.py  graph.py  storage.py  vector.py
rae-core/rae_core/config/: __init__.py  defaults.py  settings.py
rae-core/rae_core/context/: builder.py  window.py
rae-core/rae_core/embedding/: manager.py  native.py  onnx_cross_encoder.py
rae-core/rae_core/exceptions/: base.py
rae-core/rae_core/factories/: infra_factory.py
rae-core/rae_core/guards/: isolation.py
rae-core/rae_core/ingestion/: detector.py  normalizer.py  pipeline.py  policy.py  segmenter.py  semantic_segmenter.py
rae-core/rae_core/interfaces/: agent.py  cache.py  database.py  embedding.py  graph.py  llm.py  reranking.py  storage.py  sync.py  vector.py
rae-core/rae_core/layers/: base.py  longterm.py  reflective.py  sensory.py  working.py
rae-core/rae_core/llm/: config.py  fallback.py  orchestrator.py  strategies.py
rae-core/rae_core/math/: __init__.py  controller.py  dynamics.py  features.py  features_v2.py  fusion.py  logic_gateway.py  metadata_injector.py  metrics.py  policy.py  quality_metrics.py  quantization_bytes.py  reasoning.py  resonance.py  semantic_resonance.py  structure.py
rae-core/rae_core/math/bandit/: arm.py  bandit.py  monitor.py
rae-core/rae_core/math/theories/: atlas.py  base.py  contract.py  evolver.py  registry.py  router.py  theory_decay_exponential.py  theory_entropy.py  theory_exclusivity.py  theory_genome.json  theory_identity.py  theory_logic_framer.py  theory_resonance_quantum.py  theory_semantic_stability.py  (+2 more)
rae-core/rae_core/models/: __init__.py  context.py  graph.py  interaction.py  memory.py  reflection.py  scoring.py  search.py  sync.py
rae-core/rae_core/rae_math/: __init__.py  dynamics.py  fusion.py  logic_gateway.py
rae-core/rae_core/reflection/: actor.py  engine.py  evaluator.py  reflector.py
rae-core/rae_core/scoring/: decay.py
rae-core/rae_core/search/: cache.py  engine.py  fusion.py
rae-core/rae_core/swarm/: orchestrator.py
rae-core/rae_core/sync/: __init__.py  diff.py  encryption.py  manager.py  merge.py  protocol.py
rae-core/rae_core/types/: enums.py
rae-core/rae_core/utils/: context.py  contract_manager.py  enterprise_guard.py  memory_bridge.py
rae-core/tests/: test_wildcard.py
rae-core/tests/adapters/: test_qdrant_multivector.py
rae-core/tests/golden/: cosine_similarity_memory_correctness.json  cosine_similarity_sqlite_correctness.json  math_score_memory_standard.json
rae-core/tests/math/: test_resonance.py  test_stability_coverage.py  test_tuning.py  test_tuning_coverage.py
rae-core/tests/rae_core/: conftest.py  mock_storage_clean.tmp  mock_storage_snippet.tmp
rae-core/tests/unit/: conftest.py  test_engine.py  test_engine_100.py  test_engine_coverage.py  test_engine_extra.py  test_engine_hardened.py  test_final_coverage.py  test_rae_first.py  test_runtime_implicit_capture.py  test_system_3_4.py  test_version.py
rae-lite/: Dockerfile.oracle  README_WINDOWS.md  build.sh  build_windows.ps1  pyproject.toml  rae-lite.spec  test_startup.py
rae-lite/build_venv/Scripts/: activate
rae-lite/rae_lite/: config.py  main.py  server.py  tray.py
rae-lite/rae_lite/ui/: app.py
rae_core/: README.md  pyproject.toml
rae_core/rae_core/: __init__.py  engine.py
rae_core/rae_core/adapters/: __init__.py  postgres.py  qdrant.py  redis.py
rae_core/rae_core/context/: __init__.py  builder.py
rae_core/rae_core/contracts/: global_atlas.yaml
rae_core/rae_core/core/: action_executor.py  actions.py  graph_operator.py  reward.py  state.py
rae_core/rae_core/interfaces/: __init__.py  repository.py
rae_core/rae_core/layers/: __init__.py  base.py  longterm.py  reflective.py  sensory.py  working.py
rae_core/rae_core/math/: policy.py
rae_core/rae_core/models/: __init__.py  contracts.py  graph.py  reflection.py
rae_core/rae_core/reflection/: __init__.py  engine.py
rae_core/rae_core/scoring/: __init__.py  scorer.py
rae_core/rae_core/search/: __init__.py  engine.py  fusion.py  query_analyzer.py
rae_core/rae_core/utils/: math_metrics.py
rae_core/tests/: __init__.py  test_engine.py  test_layers.py
(+8360 files in other folders)
